--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Frame an image with its dominant color using a simple directive",
   "author": "Matthew Brandly",
   "version": "0.1.0",
+  "homepage": "http://brandly.github.io/angular-adaptive-backgrounds/",
   "devDependencies": {
     "gulp": "^3.8.8",
     "gulp-concat": "^2.1.7",
@@ -15,6 +16,7 @@
     "express": "^3.4.8",
     "path": "~0.4.9",
     "gulp-autoprefixer": "^1.0.1",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-header": "^1.2.2"
   }
 }
