--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular-adaptive-backgrounds",
+  "main": "dist/angular-adaptive-backgrounds.js",
   "description": "Frame an image with its dominant color using a simple directive",
   "version": "0.2.3",
   "author": "Matthew Brandly",
